--- a/CardPayment/view/frontend/web/template/payment/zenrisecardpayment.html
+++ b/CardPayment/view/frontend/web/template/payment/zenrisecardpayment.html
@@ -8,6 +8,12 @@
 		/>
 		<label data-bind="attr: {'for': getCode()}" class="label"><span data-bind="text: getTitle()"></span></label>
 	</div>
+	<div>
+		<h1>HELLO WORLD, HERE WE CAN PUT A BEATIFULL CONTENT</h1>
+		<div>
+			<span data-bind="text: getClientId()"></span>
+		</div>
+	</div>
 	<div class="payment-method-content">
 		<div class="actions-toolbar">
 			<div class="primary">
